--- a/index.html
+++ b/index.html
@@ -81,12 +81,15 @@
                 <a href="https://www.figma.com/file/CFA6FIus1JoCrgGefsjj9H/onCraft?node-id=0:1&t=Kq8dflwZj7gD6xki-1" id="oncraft"><h4>onCraft — Prototype Design (9/2021-1/2022)</h4></a> 
                 <p>Served as a single UI/UX designer for this course project.</p>
 
-                <a href="https://gitlab.com/kayura-team/kayura-app" id="bighugs"><h4>BigHugs — Prototype Design (10-11/2022)</h4></a>
+                <a href="https://www.figma.com/file/pgbVniui7xeT4bbhFTCKWM/BigHugs-App?type=design&node-id=0%3A1&mode=design&t=tt7GdsS96q8opoX9-1" id="bighugs"><h4>BigHugs — Prototype Design (10-11/2022)</h4></a>
                 <p>Collaborated in a team of four as a content designer and UI/UX designer assistant. Responsibilities included creating display posters, Instagram content, and contributing to the user flow and prototype development.</p>
                 
                 <a href="https://gitlab.com/kayura-team/kayura-app" id="kayuracraft"><h4>Kayura Craft — Website (9/2022–1/2023)</h4></a>
                 <p>Worked with two classmates on this course project. Employed the Prototyping method in software development. At the engineering stage, I acted as a front-end engineer, utilizing Bootstrap 5 as the CSS framework.</p>
                 
+                <a href="https://gitlab.com/kayura-team/kayura-app" id="kayuracraft"><h4>Save The Future — Web Design (1/2023)</h4></a>
+                <p>Created a website design for a charity concert</p>
+
                 <a href="https://github.com/nafissaal/konseria-backend-api" id="konseria"><h4>Konseria — Mobile Application (5-6/2023)</h4></a>
                 <p>Developed the API using Hapi framework and the Database using MySQL, then deployed the application in Google Cloud, using App Engine for the API and CloudSQL for the Database.</p>
             </article>
