--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <a href="#bighugs" class="transition">BigHugs</a>
                             <a href="#kayuracraft" class="transition">Kayura Craft</a>
                             <a href="#konseria" class="transition">Konseria</a>
+                            <a href="#savethefuture" class="transition">Save The Future</a>
                         </div>
                     </div>  
                 </li>
@@ -87,7 +88,7 @@
                 <a href="https://gitlab.com/kayura-team/kayura-app" id="kayuracraft"><h4>Kayura Craft — Website (9/2022–1/2023)</h4></a>
                 <p>Worked with two classmates on this course project. Employed the Prototyping method in software development. At the engineering stage, I acted as a front-end engineer, utilizing Bootstrap 5 as the CSS framework.</p>
                 
-                <a href="https://gitlab.com/kayura-team/kayura-app" id="kayuracraft"><h4>Save The Future — Web Design (1/2023)</h4></a>
+                <a href="https://gitlab.com/kayura-team/kayura-app" id="savethefuture"><h4>Save The Future — Web Design (1/2023)</h4></a>
                 <p>Created a website design for a charity concert</p>
 
                 <a href="https://github.com/nafissaal/konseria-backend-api" id="konseria"><h4>Konseria — Mobile Application (5-6/2023)</h4></a>
